# Spallation-Source

./: CMakeLists.txt  SS_V0_1_1.cc
analysis/: activation_output.root  activation_output_t0.root  activation_output_t1.root  plot_detectors.C  plot_detectors.py
include/actions/: ActionInitialization.hh  EventAction.hh  PrimaryGeneratorAction.hh  Run.hh  RunAction.hh  SteppingAction.hh  TrackingAction.hh
include/anaysics/: As_Source.hh
include/constants/: AfConstants.hh  Constants.hh  CssConstants.hh  PgConstants.hh  TtConstants.hh
include/detectors/: ActivationFoil.hh  ActivationFoilBuilder.hh  ComptonSuppressionSystem.hh  FissionBuilder.hh  SourceDetector.hh  TantalumTarget.hh
include/gun/: PgConstants.hh  ProtonGun.hh
include/worldconstruction/: DetectorConstruction.hh
macros/: init_vis.mac  run.mac  tantalum_proton.mac  vis.mac
readme/: readme.txt
src/actions/: ActionInitialization.cc  EventAction.cc  PrimaryGeneratorAction.cc  Run.cc  RunAction.cc  SteppingAction.cc  TrackingAction.cc
src/detectors/: ActivationFoil.cc  ActivationFoilBuilder.cc  ComptonSuppressionSystem.cc  FissionBuilder.cc  SourceDetector.cc  TantalumTarget.cc
src/gun/: ProtonGun.cc
src/worldconstruction/: DetectorConstruction.cc
